--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "parcel-project-template",
+  "name": "images-js",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://liussi.github.io/goit-js-hw-11",
+  "homepage": "https://liussi.github.io/images-js",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
+    "build": "parcel build src/*.html --public-url /images-js/"
   },
   "repository": {
     "type": "git",
